Fix alignment of buttons in image slider's initial display

--- a/src/blocks/image-slider/editor.scss
+++ b/src/blocks/image-slider/editor.scss
@@ -5,6 +5,9 @@ div[data-block] > .ub_image_slider {
 	.ub_image_slider_add_images {
 		margin: 0 auto;
 	}
+	.components-placeholder__fieldset {
+		display: flex;
+	}
 }
 
 .ub_image_slider_url_input {
